# DirkEngine

./: .gitignore  CMakeLists.txt  Makefile
include/: DirkEngine.hpp  logger.hpp
include/engine/: dirkengine.hpp
src/: DirkEngine.cpp  logger.cpp  main.cpp
src/Engine/: DirkEngine.cpp
src/engine/: dirkengine.cpp
